@@ -1,0 +1,5 @@
+#pragma once
+
+#include <opencv2/core/core.hpp>
+
+cv::Mat omp (const cv::Mat& D, const cv::Mat& X);
